Added fee module